# xivapp

./: Cargo.toml
crates/xivapp/: Cargo.toml
crates/xivapp/src/: app_menus.rs  lib.rs  main.rs  themes.rs  title_bar.rs
